k8s-multicontainer/web-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: test-kube
spec:
    replicas: 1
    selector:
        matchLabels:
            component: redis
    template:
        metadata:
            namespace: test-kube
            labels:
                component: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  ports:
                    - containerPort: 6379
                  imagePullPolicy: Always
