k8s-multicontainer/web-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-srvc
    namespace: test-kube
spec:
    type: ClusterIP
    ports:
        - port: 5432
          targetPort: 5432
    selector:
        component: postgres
