k8s-multicontainer/web-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-srvc
    namespace: test-kube
spec:
    type: ClusterIP
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        component: redis
