k8s-multicontainer/web-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: multi-client-srvc
    namespace: test-kube
spec:
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: 8080
    selector:
        component: multi-client
