k8s-multicontainer/Ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    namespace: test-kube
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /visits
spec:
    rules:
    -   http:
            paths:
                - path: /visits
                  backend:
                    serviceName: multi-client-srvc
                    servicePort: 8080
